[package]
name = "bresson"
version = "0.1.0"
authors = ["Mani Sundararajan"]
edition = "2021"
description = "EXIF Metadata Processing Tool"
license = "MIT"
keywords = ["exif", "metadata", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
color-eyre = { version = "0.6", default-features = false }
crossterm = "0.27.0"
kamadak-exif = "0.5.5"
rand = "0.8.5"
ratatui = { version = "0.25.0", features = ["all-widgets"] }
